--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,14 +23,14 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '22'
         cache: 'npm'
         
     - name: Install dependencies
       run: npm ci
       
     - name: Build package
-      run: npm run build
+      run: npm run p:build
 
     - name: Authenticate to npm
       run: echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
@@ -55,14 +55,14 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '22'
         cache: 'npm'
         
     - name: Install dependencies
       run: npm ci
       
     - name: Build package
-      run: npm run build
+      run: npm run p:build
       
     - name: Publish to npm
       run: npm publish --provenance --access public
