--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
       run: npm ci
       
     - name: Build package
-      run: npm run p:build
+      run: npm run build
 
     - name: Authenticate to npm
       run: echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
@@ -62,7 +62,7 @@ jobs:
       run: npm ci
       
     - name: Build package
-      run: npm run p:build
+      run: npm run build
       
     - name: Publish to npm
       run: npm publish --provenance --access public
