--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "release": "node scripts/release.js",
     "release:patch": "node scripts/release.js patch",
     "release:minor": "node scripts/release.js minor",
-    "release:major": "node scripts/release.js major"
+    "release:major": "node scripts/release.js major",
+    "q": "rm -rf dist react-textarea-enhanced-1.3.0.tgz && npm run build && npm pack && npm uninstall react-textarea-enhanced && npm install react-textarea-enhanced-1.3.0.tgz"
   },
   "dependencies": {
+    "react-textarea-enhanced": "file:react-textarea-enhanced-1.3.0.tgz",
     "twitter-text": "^3.1.0"
   },
   "devDependencies": {
